@@ -1,0 +1,3 @@
+# We do not want these sessions visible
+/usr/share/xsessions/gnome-failsafe.desktop
+/usr/share/xsessions/xterm.desktop
