@@ -18,26 +18,16 @@ set -e
 # for details, see http://www.debian.org/doc/debian-policy/ or
 # the debian-policy package
 
-rm_conffile() {
-    local PKGNAME="$1" # Unused
-    local CONFFILE="$2"
-
-    if [ -f "$CONFFILE".dpkg-del ]; then
-        mv -f "$CONFFILE".dpkg-del "$CONFFILE"
-    fi
-}
+# Clean up from old conffiles
+dpkg-maintscript-helper rm_conffile /etc/event.d/ttymsg 1.23 -- "$@"
+dpkg-maintscript-helper rm_conffile /etc/init/ttymsg.conf 1.23 -- "$@"
+dpkg-maintscript-helper rm_conffile \
+    /etc/apt/sources.list.d/debathena-backports.list 1.36 -- "$@"
+dpkg-maintscript-helper rm_conffile \
+    /etc/apt/preferences.d/debathena-libstdcplusplus.pref 1.36 -- "$@"
 
 case "$1" in
     abort-install|abort-upgrade)
-        if dpkg --compare-versions "$2" lt 1.24~; then
-            rm_conffile debathena-cluster-login-config "/etc/event.d/ttymsg"
-            rm_conffile debathena-cluster-login-config "/etc/init/ttymsg.conf"
-        fi
-
-	if dpkg --compare-versions "$2" lt 1.36.2~; then
-	    rm_conffile debathena-cluster-login-config /etc/apt/sources.list.d/debathena-backports.list
-	    rm_conffile debathena-cluster-login-config /etc/apt/preferences.d/debathena-libstdcplusplus.pref
-	fi
     ;;
 
     purge|remove|upgrade|failed-upgrade|disappear)
